# QuantumErrorCorrectionSimulator

./: .gitignore  CMakeLists.txt  README.md  commit_msg.txt  diff.txt  diff_output.txt  main.cpp
include/: circuit.h  correction.h  logicalQubit.h  noise.h  quantumGate.h  quantumState.h  qubit.h  simulator.h
src/: circuit.cpp  correction.cpp  logicalQubit.cpp  noise.cpp  quantumGate.cpp  quantumState.cpp  qubit.cpp  simulator.cpp
test/: multiQubits.h  singleQubit.h  test_circuit.cpp  test_error_correction.cpp  test_noise.cpp  test_quantumGate.cpp  test_qubit.cpp  test_simulator.cpp
